--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -1,26 +1,4 @@
-
-<header class="bg-dark py-5">
-	<div class="container px-4 px-lg-5 my-5">
-		<div class="text-center text-white">
-			<h1 class="display-4 fw-bolder">Genuine Gamers</h1>
-			<p class="lead fw-normal text-white-50 mb-0">
-				No cumplimos propositos<br> <b>Desbloqueamos Logros</b>
-			</p>
-		</div>
-	</div>
-</header>
-<!-- Section-->
-<section class="py-5">
-	<div class="container px-4 px-lg-5 mt-5">
-		<div
-			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
-			id="caja"></div>
-		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-			<div class="text-center">
-				<a class="btn btn-outline-dark mt-auto" onclick="cajas()">View
-					More</a>
-			</div>
-			<table class="table table-dark">
+<table class="table table-dark" style="display:none">
 				<tbody>
 					<tr th:each="game:${games}">
 						<td th:text="${game.id}" id="idjuego" th:value="${game.id}"></td>
@@ -31,6 +9,29 @@
 					</tr>
 				</tbody>
 			</table>
+<header class="bg-dark py-5" onload="caja2()">
+	<div class="container px-4 px-lg-5 my-5">
+		<div class="text-center text-white">
+			<h1 class="display-4 fw-bolder">Genuine Gamers</h1>
+			<p class="lead fw-normal text-white-50 mb-0">
+				No cumplimos propositos<br> <b>Desbloqueamos Logros</b>
+			</p>
+			
+		</div>
+	</div>
+</header>
+<!-- Section-->
+<section class="py-5">
+	<div class="container px-4 px-lg-5 mt-5" >
+		<div
+			class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center"
+			id="caja"></div>
+		<div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+			<div class="text-center">
+				<a class="btn btn-outline-dark mt-auto" onclick="caja2()">View
+					More</a>
+			</div>
+			
 		</div>
 	</div>
 	</div>
