--- a/src/main/resources/templates/_t/body.html
+++ b/src/main/resources/templates/_t/body.html
@@ -16,6 +16,20 @@
 		</tr>
 	</tbody>
 </table>
+<table class="table table-dark" style="display: none">
+	<tbody>
+		<tr th:each="val:${points}">
+			<td th:text="${val.id}" id="pointid" th:value="${val.id}"></td>
+			<td th:text="${val.puntuacion}" id="pointspoints" th:value="${val.puntuacion}"></td>
+			<td th:text="${val.puntuacion}" id="catjuego"
+			th:value="${val.puntuacion}"></td>
+			<td th:text="${val.punU.username}" id="userpoint"
+				th:value="${val.punU.username}"></td>
+			<!-- <td th:text="${val.punG.name}" id="matchpoint" th:value="${points.punG.name}"></td> -->
+		</tr>
+	</tbody>
+</table>
+
 
 <table class="table table-dark" style="display: none">
 	<tbody>
