--- a/src/main/resources/templates/user/adminPanel/getAllUser.html
+++ b/src/main/resources/templates/user/adminPanel/getAllUser.html
@@ -1,51 +1,49 @@
-<div th:replace="/_t/head" />
-<div th:replace="/_t/nav" />
+<div th:replace="_t/head" />
+<div th:replace="_t/nav" />
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
-			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.category}" id="catjuego"
-				th:value="${game.category}" class="Sfiltrar cat"></td>
-			<td th:text="${game.description}" id="descjuego"
-				th:value="${game.description}" class="Sfiltrar"></td>
-			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.punctuation}" id="puncjuego"
-				th:value="${game.punctuation}" class="Sfiltrar"></td>
+			<td th:text="${game.id}" id="idjuego" th:value="${game.id}" class="Sfiltrar"></td>
+			<td th:text="${game.name}" id="namejuego" th:value="${game.name}" class="Sfiltrar"></td>
+			<td th:text="${game.category}" id="catjuego" th:value="${game.category}" class="Sfiltrar cat"></td>
+			<td th:text="${game.description}" id="descjuego" th:value="${game.description}" class="Sfiltrar"></td>
+			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}" class="Sfiltrar"></td>
+			<td th:text="${game.punctuation}" id="puncjuego" th:value="${game.punctuation}" class="Sfiltrar"></td>
 		</tr>
 	</tbody>
 </table>
 
-<table class="table table-dark">
-	<thead>
-		<tr>
-			<th scope="col">Name</th>
-			<th scope="col">E-Mail</th>
-			<th scope="col">Phone Number</th>
-			<th scope="col">Birth Date</th>
-			<th scope="col">Genre</th>
-			<th scope="col">Rol</th>
-			<th scope="col">Delete</th>
-			<th scope="col">Delete Comments</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr th:each="usuario:${user}">
-			<td th:text="${usuario.username}"></td>
-			<td th:text="${usuario.mail}"></td>
-			<td th:text="${usuario.tlf}"></td>
-			<td th:text="${usuario.fnac}"></td>
-			<td th:text="${usuario.sex}"></td>
-			<td th:text="${usuario.role.name}"></td>
-			<td><a th:href="@{/user/adminPanel/deleteUser/{id}(id=${usuario.id})}"
-				class="btn btn-danger">Delete</a></td>
-			<td><a th:href="@{/user/adminPanel/goComment/{user}(user=${usuario.username})}"
-				class="btn btn-danger">Delete Comments</a></td>
-	</tbody>
-</table>
+<div class="container card col-lg-12 col-md-6 table-games bg-dark text-light">
+	<h1 class="display-1">Listado de Usuarios</h1>
+	<div class="bg-dark table-responsive-xl table-responsive-lg table-responsive-md">
+		<table class="table table-dark">
+			<thead>
+				<tr>
+					<th scope="col">Name</th>
+					<th scope="col">E-Mail</th>
+					<th scope="col">Phone Number</th>
+					<th scope="col">Birth Date</th>
+					<th scope="col">Genre</th>
+					<th scope="col">Rol</th>
+					<th scope="col">Delete</th>
+					<th scope="col">Delete Coments</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr th:each="usuario:${user}">
+					<td th:text="${usuario.username}"></td>
+					<td th:text="${usuario.mail}"></td>
+					<td th:text="${usuario.tlf}"></td>
+					<td th:text="${usuario.fnac}"></td>
+					<td th:text="${usuario.sex}"></td>
+					<td th:text="${usuario.role.name}"></td>
+					<td><a th:href="@{/user/adminPanel/deleteUser/{id}(id=${usuario.id})}"
+							class="btn btn-danger">Delete</a></td>
+					<td><a th:href="@{/user/adminPanel/deleteComment/{id}(id=${usuario.id})}"
+							class="btn btn-danger">Delete Comments</a></td>
+			</tbody>
+		</table>
+	</div>
 
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+	<div th:replace="_t/footer" />
+	<div th:replace="_t/end" />
