--- a/src/main/resources/templates/user/ajustes.html
+++ b/src/main/resources/templates/user/ajustes.html
@@ -31,22 +31,7 @@
 		</div>
 		<div
 			class="col-lg-12 justify-content-center alig-items-center d-flex row">
-			<div class="card col-lg-3 col-md-12 ajustes-form">
-				<h2>Ajustes de aplicaciÃ³n</h2>
-				<form>
-					Acepta el uso de cookies <select name="cookies"
-						class="ajustes-cajas">
-						<option value="value1" selected>Si</option>
-						<option value="value2">No</option>
-					</select> <br> ï¿½Quiere activar la recuperaciï¿½n de contraseï¿½a? <select
-						name="rPwd" class="ajustes-cajas">
-						<option value="value1" selected>Si</option>
-						<option value="value2">No</option>
-					</select> <br> <br> <input type="submit" value="Confirmar cambios"
-						class="btn btn-dark">
-				</form>
-			</div>
-			<div class="card col-lg-6 col-md-12 ajustes-form">
+			<div class="card col-lg-12 col-md-12 ajustes-form">
 				<h2>Ajustes de Usuario</h2>
 				<form action="/user/intermedio" method="post"
 					class="form-group mt-3">
@@ -57,10 +42,10 @@
 				</form>
 				<form action="/user/intermedio" method="post"
 					class="form-group mt-3">
-					<label>Cambiar de contraseÃ±a </label> <input type="pwd" name="pwd"
-						placeholder="Introduzca su nueva contraseï¿½a"
+					<label>Cambiar de contraseña </label> <input type="pwd" name="pwd"
+						placeholder="Introduzca su nueva contraseña"
 						class="form-control mt-2" onkeyup="valpwd()"> <input
-						type="text" name="pwd" placeholder="Repita su nueva contraseï¿½a"
+						type="text" name="pwd" placeholder="Repita su nueva contraseña"
 						class="form-control" onblur="pwdError()"> <input
 						type="submit" value="Confirmar cambio" class="btn btn-dark mt-1">
 				</form>
@@ -82,4 +67,4 @@
 		</div>
 	</div>
 </section>
-<div th:replace="/_t/footer" />
+<div th:replace="_t/footer" />
