--- a/src/main/resources/templates/_t/frame.html
+++ b/src/main/resources/templates/_t/frame.html
@@ -1,5 +1,5 @@
-<div th:replace="/_t/head"/>
-<div th:replace="/_t/nav"/>
-<div th:replace="/_t/body"/>
-<div th:replace="/_t/footer"/>
-<div th:replace="/_t/end"/>
+<div th:replace="_t/head"/>
+<div th:replace="_t/nav"/>
+<div th:replace="_t/body"/>
+<div th:replace="_t/footer"/>
+<div th:replace="_t/end"/>
