--- a/src/main/resources/templates/user/admin/updateGame.html
+++ b/src/main/resources/templates/user/admin/updateGame.html
@@ -24,7 +24,7 @@
 		<input type="hidden" th:field="*{id}">
 		<div class="form-group create-games">
 			<label>New Name</label> <input type="text" name="name"
-				class="form-control" th:field="*{game.name}">
+				class="form-control" th:field="*{name}">
 		</div>
 		<div class="form-group create-games">
 			<label>Category</label> <input type="text" id="category"
