--- a/src/main/resources/templates/user/admin/updateGame.html
+++ b/src/main/resources/templates/user/admin/updateGame.html
@@ -28,11 +28,11 @@
 		</div>
 		<div class="form-group create-games">
 			<label>Category</label> <input type="text" id="category"
-				name="category" class="form-control">
+				name="category" class="form-control" th:field="*{category}">
 		</div>
 		<div class="form-group create-games">
 			<label>Description</label> <input type="text" id="description"
-				name="description" class="form-control">
+				name="description" class="form-control" th:field="*{description}">
 		</div>
 		<input type="submit" value="Enviar"
 			class="btn btn-primary games-button">
