--- a/src/main/resources/templates/user/admin/createGame.html
+++ b/src/main/resources/templates/user/admin/createGame.html
@@ -64,9 +64,8 @@
 		</tr>
 	</tbody>
 </table>
-
 <body>
-	<div th:replace="/_t/nav" />
+	<div th:replace="_t/nav" />
 	<div class="container card col-lg-12 col-md-6 bg-dark text-light mb-2">
 		<h1 class="display-1">Crear Juego</h1>
 		<form>
@@ -87,5 +86,5 @@
 
 		</form>
 	</div>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
