--- a/src/main/resources/templates/user/infoGame.html
+++ b/src/main/resources/templates/user/infoGame.html
@@ -1,5 +1,5 @@
-<div th:replace="/_t/head" />
-<div th:replace="/_t/nav" />
+<div th:replace="_t/head" />
+<div th:replace="_t/nav" />
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${games}">
@@ -21,14 +21,12 @@
 <table class="table table-dark" style="display: none">
 	<tbody>
 		<tr th:each="game:${gamers}">
-			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"
-				class="Sfiltrar"></td>
-			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"
-				class="Sfiltrar"></td>
+			<td th:text="${game.id}" id="idjuego" th:value="${game.id}"></td>
+			<td th:text="${game.name}" id="namejuego" th:value="${game.name}"></td>
 			<td th:text="${game.category}" id="catjuego"
-				th:value="${game.category}" class="Sfiltrar cat"></td>
+				th:value="${game.category}"></td>
 			<td th:text="${game.description}" id="descjuego"
-				th:value="${game.description}" class="Sfiltrar"></td>
+				th:value="${game.description}"></td>
 			<td th:text="${game.img}" id="imgjuego" th:value="${game.img}"
 				class="Sfiltrar"></td>
 			<td th:text="${game.punctuation}" id="puncjuegos"
@@ -52,60 +50,68 @@
 							<br>
 							<h4 th:text="${game.category}"></h4>
 						</div>
-						<div class="col-lg-2 col-md-12 ">
+						<div class="col-lg-2 col-md-12">
 							Puntuaci&oacuten
-							<div class="d-flex justify-content-center small text-warning mb-2" id="punct"
-								th:text="${game.punctuation}"></div>
+							<div
+								class="d-flex justify-content-center small text-warning mb-2"
+								id="punct"></div>
 						</div>
-					</div>
-					<div class="row align-items-end mt-2">
-						<div class="col-12 align-items-center">
-							<h5 th:text="${game.description}"></h5>
-						</div>
+
 					</div>
 				</div>
-			</div>
-			<div class="col-lg-12 m-3">
-				<h2>Comenta tu opinion</h2>
-				<div class="card mt-1" th:each="game:${gamers}">
-					<form action="/user/comment" method="POST">
-						<div class="form-group">
-							<input type="text" name="texto" class="form-control"
-								placeholder="Comenta tus ideas">
-						</div>
-						<input type="hidden" name="nombre" th:value="${game.name}">
-						<input type="submit" value="Comentar"
-							class="btn btn-info games-button">
-					</form>
-				</div>
-				<div class="card mt-2" th:each="commentos:${comments}">
-					<h5 class="card-header" th:text="${commentos.user.username}">Comentario</h5>
-					<div class="card-body">
-						<p class="card-text" th:text="${commentos.text}"></p>
-						<button class="btn btn-info games-button" onclick="activar()">Responder</button>
-						<form action="/user/answer" method="POST" id="oculto"
-							style="display: none">
+				<div class="col-lg-12 m-3">
+					<h2>Comenta tu opinion</h2>
+					<div class="card mt-1" th:each="game:${gamers}">
+						<form action="/user/comment" method="POST">
 							<div class="form-group">
 								<input type="text" name="texto" class="form-control"
-									placeholder="Escriba su respuesta">
+									placeholder="Comenta tus ideas">
 							</div>
-							<input type="hidden" name="comment" th:value="${commentos.id}">
+							<input type="hidden" name="nombre" th:value="${game.name}">
 							<input type="submit" value="Comentar"
 								class="btn btn-info games-button">
 						</form>
-						<div th:each="answer:${answers}" th:if="${answer!=null}">
-							<div th:if="${commentos.id}==${answer.comment.id}">
-								<h6 class="card-header" th:text="${answer.user.username}"></h6>
-								<p class="card-body" th:text="${answer.text}"></p>
+					</div>
+					<div class="card mt-2" th:each="commentos:${comments}">
+						<div class="card-header d-flex flex-row">
+							<h5 th:text="${commentos.user.username}">Comentario</h5>
+							&nbsp;&nbsp;<a th:if="${session.user.role?.name == 'ADMIN'}"
+								th:href="@{/user/adminPanel/deleteComment/{id}(id=${commentos.id})}"
+								class="btn btn-danger"><img src="/img/delete-coment.png"
+								class="btn-comment"></a>
+						</div>
+						<div class="card-body">
+							<p class="card-text" th:text="${commentos.text}"></p>
+							<button class="btn btn-info games-button" onclick="activar()">Responder</button>
+							<form action="/user/answer" method="POST" id="oculto"
+								style="display: none">
+								<div class="form-group">
+									<input type="text" name="texto" class="form-control"
+										placeholder="Escriba su respuesta">
+								</div>
+								<input type="hidden" name="comment" th:value="${commentos.id}">
+								<input type="submit" value="Comentar"
+									class="btn btn-info games-button">
+							</form>
+							<div th:each="answer:${answers}" th:if="${answer!=null}">
+								<div th:if="${commentos.id}==${answer.comment.id}"
+									class="card mt-2">
+									<div class="card-header d-flex flex-row">
+										<h6 th:text="${answer.user.username}">Comentario</h6>
+										&nbsp;&nbsp;<a th:if="${session.user.role?.name == 'ADMIN'}"
+											th:href="@{/user/adminPanel/deleteanswer/{id}(id=${answer.id})}"
+											class="btn btn-danger"><img src="/img/delete-coment.png"
+											class="btn-comment"></a>
+									</div>
+									<p class="card-body" th:text="${answer.text}"></p>
+								</div>
 							</div>
-
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-	</div>
 </section>
-<div th:replace="/_t/footer" />
-<div th:replace="/_t/end" />
+<div th:replace="_t/footer" />
+<div th:replace="_t/end" />
